--- a/index.html
+++ b/index.html
@@ -105,12 +105,13 @@
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              Welcome to my portfolio! I'm Rahul Dasari, a dedicated Computer Science and Engineering student specializing in Data Science at CMR Institute of Technology. I'm passionate about pushing the boundaries of technology and thrive on the challenge of turning dreams into reality.
+
+My expertise spans diverse areas, including frontend development, software engineering, problem-solving, creative design, and digital marketing. My commitment to excellence drives me to stay at the forefront of technological advancements.
+
+In the dynamic world of Computer Science, I bring a solution-oriented mindset and innovative approach to every project. I'm excited to contribute my skills and knowledge to the ever-evolving tech landscape.
+
+Explore my portfolio to see how my passion and proficiency converge to create meaningful and impactful projects. If you have inquiries or collaboration opportunities, I'm ready to connect and explore the boundless possibilities of technology together.
             </p>
           </div>
         </div>
