--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/RahulDasari-Resume.pdf')"
           >
             Download CV
           </button>
@@ -150,17 +150,6 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
                 <div>
                   <h3>CSS</h3>
                   <p>Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>SASS</h3>
-                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
