--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
           </div>
           <div class="text-container">
             <p>
-              Welcome to my portfolio! I'm Rahul Dasari, a dedicated Computer Science and Engineering student specializing in Data Science at CMR Institute of Technology. I'm passionate about pushing the boundaries of technology and thrive on the challenge of turning dreams into reality.
+              Welcome to my portfolio! 
+              <br>I'm Rahul Dasari, a dedicated Computer Science and Engineering student specializing in Data Science at CMR Institute of Technology. I'm passionate about pushing the boundaries of technology and thrive on the challenge of turning dreams into reality.
 
 My expertise spans diverse areas, including frontend development, software engineering, problem-solving, creative design, and digital marketing. My commitment to excellence drives me to stay at the forefront of technological advancements.
 <br>
