--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/RahulDasari1'"
               >
                 Live Demo
               </button>
@@ -294,17 +294,17 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">E-Commerce Website</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/RahulDasari1'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/RahulDasari1'"
               >
                 Live Demo
               </button>
@@ -318,7 +318,7 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">Stock Price Prediction</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
