--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
   <body>
+    
+    <!-- Navigation Bar -->
+
     <nav id="desktop-nav">
       <div class="logo">Rahul Dasari</div>
       <div>
@@ -20,6 +23,10 @@
         </ul>
       </div>
     </nav>
+
+
+    <!-- Home Page -->
+
     <nav id="hamburger-nav">
       <div class="logo">Rahul Dasari</div>
       <div class="hamburger-menu">
@@ -71,6 +78,10 @@
         </div>
       </div>
     </section>
+
+
+    <!-- About Page -->
+
     <section id="about">
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
@@ -123,6 +134,10 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
         onclick="location.href='./#experience'"
       />
     </section>
+
+
+    <!-- Experience Page  -->
+
     <section id="experience">
       <p class="section__text__p1">Explore My</p>
       <h1 class="title">Experience</h1>
@@ -257,9 +272,15 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
         onclick="location.href='./#projects'"
       />
     </section>
+
+
+    <!-- Projects Page -->
+
     <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
+
+      <!-- project-1 -->
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container color-container">
@@ -286,6 +307,8 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
               </button>
             </div>
           </div>
+
+          <!-- project-2 -->
           <div class="details-container color-container">
             <div class="article-container">
               <img
@@ -310,6 +333,8 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
               </button>
             </div>
           </div>
+
+          <!-- project-3 -->
           <div class="details-container color-container">
             <div class="article-container">
               <img
@@ -335,7 +360,11 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
             </div>
           </div>
         </div>
+        
       </div>
+
+      <!-- Contact Page -->
+
       <img
         src="./assets/arrow.png"
         alt="Arrow icon"
