--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             onclick="location.href='https://www.linkedin.com/in/rahul-dasari-drp/'"
           />
           <img
-            src="./assets/github.png"
+            src="./assets/logo.png"
             alt="My Github profile"
             class="icon"
             onclick="location.href='https://github.com/RahulDasari1'"
