coding profiles added

--- a/index.html
+++ b/index.html
@@ -275,6 +275,84 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
     </section>
 
 
+    <!-- Coding profiles -->
+    <section>
+      <p class="section__text__p1">Check up on My</p>
+      <h1 class="title">Coding Profiles</h1>
+      <div class="contact-info-upper-container">
+        <div class="contact-info-container">
+          <img
+            src="./assets/codechef-logo.jpg"
+            alt="codechef icon"
+            class="icon contact-icon email-icon"
+          />
+          <p><a href="mailto:dasarirahulpatel.drp@gmail.com">rahuldrp</a></p>
+        </div>
+        <div class="contact-info-container">
+          <img
+            src="./assets/green-arrow.jpg"
+            alt="LinkedIn icon"
+            class="icon contact-icon"
+          />
+          <p><a href="https://www.linkedin.com/in/rahul-dasari-drp/">Highest rating on codechef - 1616+</a></p>
+        </div>
+      </div>
+      <div class="contact-info-upper-container">
+        <div class="contact-info-container">
+          <img
+            src="./assets/codeforces-logo.jpg"
+            alt="Email icon"
+            class="icon contact-icon email-icon"
+          />
+          <p><a href="mailto:dasarirahulpatel.drp@gmail.com">rahuldrp</a></p>
+        </div>
+        <div class="contact-info-container">
+          <img
+            src="./assets/green-arrow.jpg"
+            alt="LinkedIn icon"
+            class="icon contact-icon"
+          />
+          <p><a href="https://www.linkedin.com/in/rahul-dasari-drp/">Highest rating on codechef</a></p>
+        </div>
+      </div>
+      <div class="contact-info-upper-container">
+        <div class="contact-info-container">
+          <img
+            src="./assets/leetcode-logo.png"
+            alt="Email icon"
+            class="icon contact-icon email-icon"
+          />
+          <p><a href="mailto:dasarirahulpatel.drp@gmail.com">rahuldrp</a></p>
+        </div>
+        <div class="contact-info-container">
+          <img
+            src="./assets/green-arrow.jpg"
+            alt="LinkedIn icon"
+            class="icon contact-icon"
+          />
+          <p><a href="https://www.linkedin.com/in/rahul-dasari-drp/">Highest rating on codechef</a></p>
+        </div>
+      </div>
+      <div class="contact-info-upper-container">
+        <div class="contact-info-container">
+          <img
+            src="./assets/hackerrank-logo.jpg"
+            alt="Email icon"
+            class="icon contact-icon email-icon"
+          />
+          <p><a href="mailto:dasarirahulpatel.drp@gmail.com">rahuldrp</a></p>
+        </div>
+        <div class="contact-info-container">
+          <img
+            src="./assets/green-arrow.jpg"
+            alt="LinkedIn icon"
+            class="icon contact-icon"
+          />
+          <p><a href="https://www.linkedin.com/in/rahul-dasari-drp/">Highest rating on codechef</a></p>
+        </div>
+      </div>
+    </section>
+    
     <!-- Projects Page -->
 
     <section id="projects">
