--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/RahulDasari1'"
+                onclick="location.href='pages/project-3.html'"
               >
                 Live Demo
               </button>
