--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 Rahul Dasari. All Rights Reserved.</p>
+      <p>Copyright &#169; 2023 <a href="https://designwithdrp.netlify.app/">Rahul Dasari</a>. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
