--- a/index.html
+++ b/index.html
@@ -472,12 +472,12 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
       <div class="details-container color-container">
         <div class="article-container">
           <img
-            src="./assets/project-1.png"
+            src="./assets/Minimal Congrats on your Promotion Free Instagram Story.png"
             alt="Project 1"
             class="project-img"
           />
         </div>
-        <h2 class="experience-sub-title project-title">ECommunity Website</h2>
+        <h2 class="experience-sub-title project-title">Adobe's GenSolve Top 5% Finalist</h2>
         <div class="btn-container">
           <button
             class="btn btn-color-2 project-btn"
