--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
       <div class="details-container color-container">
         <div class="article-container">
           <img
-            src="https://media.licdn.com/dms/image/v2/D5622AQHJOtR4d25v1A/feedshare-shrink_1280/feedshare-shrink_1280/0/1718634677721?e=1727308800&v=beta&t=dkstSgtnetpG0fCKQqgBUfqHIotk3Tj_bURCHb7CIro"
+            src="assets/Achievement-2.png"
             alt="Project 2"
             class="project-img"
           />
@@ -513,7 +513,7 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
       <div class="details-container color-container">
         <div class="article-container">
           <img
-            src="https://media.licdn.com/dms/image/v2/D5622AQHjOaC94r-dYg/feedshare-shrink_1280/feedshare-shrink_1280/0/1697116279034?e=1727308800&v=beta&t=0FCxrf8eKeJvhl2c1ty_rnl-hOziVOH7Add2f1jrjqI"
+            src="assets/Achievement-3.png"
             alt="Project 3"
             class="project-img"
           />
@@ -539,7 +539,10 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
     onclick="location.href='./#contact'"
   />
 </section>
-
+<br>
+<br>
+<br>
+<br>
     <!-- Contact Page -->
     
     <section id="contact">
