--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/about-pic.png"
+            src="./assets/Rahul_Dasari_Photo.png"
             alt="Profile picture"
             class="about-pic"
           />
@@ -105,7 +105,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>1+ years <br />Frontend Development</p>
+              <p>2+ years <br />Frontend Development</p>
             </div>
             <div class="details-container">
               <img
