--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
       <div class="details-container color-container">
         <div class="article-container">
           <img
-            src="./assets/Minimal Congrats on your Promotion Free Instagram Story.png"
+            src="./assets/Achievement 1.png"
             alt="Project 1"
             class="project-img"
           />
@@ -492,7 +492,7 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
       <div class="details-container color-container">
         <div class="article-container">
           <img
-            src="assets/Achievement-2.png"
+            src="assets/Achievement 3.png"
             alt="Project 2"
             class="project-img"
           />
@@ -513,7 +513,7 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
       <div class="details-container color-container">
         <div class="article-container">
           <img
-            src="assets/Achievement-3.png"
+            src="assets/Achievement 2.png"
             alt="Project 3"
             class="project-img"
           />
