--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <li><a href="#experience">Experience</a></li>
           <li><a href="#codingprofiles">Coding Profiles</a></li>
           <li><a href="#projects">Projects</a></li>
+          <li><a href="#achievements">Achievements</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -42,6 +43,7 @@
           <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
           <li><a href="#codingprofiles" onclick="toggleMenu()">Coding Profiles</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+          <li><a href="#achievements" onclick="toggleMenu()">Achievements</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
       </div>
@@ -457,13 +459,15 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
         src="./assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
-        onclick="location.href='./#contact'"
+        onclick="location.href='./#achievement'"
       />
     </section>
+    <br>
+    <br>
 <!-- Achievements Page -->
-<br>
-<section id="projects">
-  <p class="section__text__p1">Browse My Recent</p>
+
+<section id="achievements">
+  <p class="section__text__p1">Have a look of My</p>
   <h1 class="title">Achievements</h1>
 
   <!-- Achievement-1 -->
@@ -472,7 +476,7 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
       <div class="details-container color-container">
         <div class="article-container">
           <img
-            src="./assets/Achievement 1.png"
+            src="./assets/Achievement-1.png"
             alt="Project 1"
             class="project-img"
           />
@@ -492,7 +496,7 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
       <div class="details-container color-container">
         <div class="article-container">
           <img
-            src="assets/Achievement 3.png"
+            src="assets/Achievement-2.png"
             alt="Project 2"
             class="project-img"
           />
@@ -513,7 +517,7 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
       <div class="details-container color-container">
         <div class="article-container">
           <img
-            src="assets/Achievement 2.png"
+            src="assets/Achievement-3.png"
             alt="Project 3"
             class="project-img"
           />
@@ -541,8 +545,7 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
 </section>
 <br>
 <br>
-<br>
-<br>
+
     <!-- Contact Page -->
     
     <section id="contact">
@@ -575,6 +578,7 @@ In the dynamic world of Computer Science, I bring a solution-oriented mindset an
             <li><a href="#experience">Experience</a></li>
             <li><a href="#codingprofiles">Coding Profiles</a></li>
             <li><a href="#projects">Projects</a></li>
+            <li><a href="#achievements">Achievements</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
