--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Tech. Bachelors Degree</p>
+              <p>B.Tech. Computer Science and Engineering (Data science)</p>
             </div>
           </div>
           <div class="text-container">
