--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="https://media.licdn.com/dms/image/v2/D5603AQEZSynLSFMq1w/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1723270782936?e=1745452800&v=beta&t=Pq5fsovd6nRr1NkEtWpa9CSqxBwYaH62RN4AaukHgxo" alt="John Doe profile picture" />
+        <img src="./assets/Updated_profilephoto.png" alt="John Doe profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
