--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>1+ years <br />Frontend Development</p>
+              <p> <!-- 1+ years --><br />Frontend Development</p>
             </div>
             <div class="details-container">
               <img
