--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <section id="profile">
       <div class="section__pic-container">
         <img
-          src="./assets/Updated_profilephoto.png"
+          src="./assets/website of Rahul Dasari Minimalist Profile Picture-modified.png"
           alt="John Doe profile picture"
         />
       </div>
@@ -405,7 +405,7 @@
             <a
               href="https://www.codechef.com/users/rahuldrp"
               style="color: #008100"
-              >Highest rating on codechef - 1617</a
+              >Highest rating - 1617+</a
             >
           </p>
           <img
@@ -429,7 +429,7 @@
             <a
               href="https://codeforces.com/profile/rahuldrp"
               style="color: #008100"
-              >Highest rating on codeforces - 877</a
+              >Highest rating - 877+</a
             >
           </p>
           <img
@@ -451,7 +451,7 @@
         <div class="contact-info-container">
           <p>
             <a href="https://leetcode.com/rahuldrp/" style="color: #008100"
-              >Highest rating on leetcode - 1500</a
+              >Highest rating - 1500+</a
             >
           </p>
           <img
@@ -690,18 +690,18 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="assets/Achievement-3.png"
+                src="assets/Achievements Design - Portfolio - McKinsey.png"
                 alt="Project 3"
                 class="project-img"
               />
             </div>
             <h2 class="experience-sub-title project-title">
-              Best Digital Head Award
+              McKinsey Forward 2025 Graduate
             </h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://www.linkedin.com/feed/update/urn:li:activity:7118221663502045185/'"
+                onclick="location.href='https://www.linkedin.com/posts/rahul-dasari-drp_mckinseyforward-leadwithcourage-shapethefuture-activity-7348337380157812736-vkcn?'"
               >
                 Know more
               </button>
@@ -712,18 +712,19 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="assets/Achievement-3.png"
+                src="assets/Achievements Design - Portfolio Uipath.png"
                 alt="Project 3"
                 class="project-img"
               />
             </div>
             <h2 class="experience-sub-title project-title">
-              Best Digital Head Award
+              Rising Star Award at Global AgentHack
+
             </h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://www.linkedin.com/feed/update/urn:li:activity:7118221663502045185/'"
+                onclick="location.href='https://forum.uipath.com/t/here-are-the-uipath-agenthack-2025-winners/3586396'"
               >
                 Know more
               </button>
@@ -734,18 +735,18 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="assets/Achievement-3.png"
+                src="assets/Achievements Design - Portfolio Best Outgoing.png"
                 alt="Project 3"
                 class="project-img"
               />
             </div>
             <h2 class="experience-sub-title project-title">
-              Best Digital Head Award
+              Best Outgoing Student 2025
             </h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://www.linkedin.com/feed/update/urn:li:activity:7118221663502045185/'"
+                onclick="location.href='https://www.linkedin.com/posts/rahul-dasari-drp_graduationday-bestoutgoingstudent-cmrit-activity-7349783682750029824-rteQ?'"
               >
                 Know more
               </button>
