--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/Rahul_Dasari_ATS_Resume.pdf1')"
+            onclick="window.open('assets/Rahul_Dasari_ATS_Resume.pdf')"
           >
             Download CV
           </button>
